--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
+		"http": "^0.0.1-security",
 		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^3.11.3",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"ws": "^8.18.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.25.6",
@@ -33,6 +35,7 @@
 		"@types/multer": "^1.4.12",
 		"@types/mysql": "^2.15.26",
 		"@types/node": "^22.5.4",
+		"@types/ws": "^8.5.12",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.2"
 	}
